# tractable

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
deploy/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
deploy/init/: falkordb-schema.cypher  postgres-schema.sql
docs/contributing/: migrations.md
docs/decisions/: 001-graph-db.md  002-coverage-command.md
examples/: register_python_api.py  register_terraform_infra.py  register_typescript_frontend.py
tests/: conftest.py
tests/e2e/: test_phase3_real_repos.py
tests/fixtures/terraform/: main.tf  (+1 more)
tests/integration/: conftest.py  test_event_bus.py  test_phase1_exit_criteria.py  test_phase2_exit_criteria.py  test_poller.py
tests/unit/: test_examples.py  test_logging.py  test_registry_main.py
tractable/: errors.py  logging.py
tractable/agent/: context.py  lifecycle.py  snapshot.py  state.py  workflow.py
tractable/cli/: main.py  output.py
tractable/events/: __init__.py  redis_bus.py
tractable/graph/: client.py  schema.py  temporal_graph.py
tractable/parsing/: pipeline.py
tractable/protocols/: agent_state_store.py  code_graph.py  event_bus.py  git_provider.py  graph_construction.py  reactivity.py  tool.py
tractable/providers/: factory.py  github.py
tractable/reactivity/: ingestion_pipeline.py  notification_router.py  poller.py  webhook_receiver.py
tractable/registry/: api.py  main.py
tractable/state/: models.py  store.py
tractable/types/: agent.py  config.py  enums.py  git.py  graph.py  pipeline.py  task.py  temporal.py
(+70 files in other folders)
