[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tractable"
version = "0.1.0"
description = "AI-powered code intelligence and graph knowledge platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.12.5",
    "langchain-core==1.2.19",
    "langgraph==1.1.2",
    "fastapi==0.135.1",
    "uvicorn[standard]==0.42.0",
    "sqlalchemy[asyncio]==2.0.48",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "redis[hiredis]==5.3.1",
    "arq==0.27.0",
    "tree-sitter==0.25.2",
    "tree-sitter-python==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "typer==0.24.1",
    "rich==14.3.3",
    "PyGithub==2.8.1",
    "httpx==0.28.1",
    "structlog==25.5.0",
    "anthropic==0.85.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.6",
    "pyright==1.1.408",
    "testcontainers[redis]==4.13.3",
    "respx==0.22.0",
]

[project.scripts]
tractable = "tractable.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=tractable --cov-report=term-missing"
markers = [
    "integration: marks tests that require external services (deselect with '-m not integration')",
]
